# refgui

./: CMakeLists.txt
Assets/Common/: Shaders.qrc
Assets/Common/Shaders/frag/: RefTexRefColorFactor_Qt.frag  RefTexRefColorFactor_Qt.frag.qsb  guageMask.frag  guageMask.frag.qsb
Assets/Common/Shaders/vert/: RefTrans_Qt.vert  RefTrans_Qt.vert.qsb  guageMask.vert  guageMask.vert.qsb
GUIModel/: main.qml
GUIModel/ACC/: ACC_Animation.qml  Material_ColorFactor.qml  Material_ColorFactor_Tbt.qml  Material_ColorFactor_noAlpha.qml
GUIModel/CruisingRange/: CruisingRange.qml
GUIModel/Map/: Map.qml
GUIModel/Menu/: Menu.qml  MenuAdas.qml  MenuAdasIconAdas.qml  MenuAdasIconNormal.qml  MenuAudio.qml  MenuContents.qml  MenuFrame.qml  MenuMain.qml  MenuRadio.qml  MenuShade.qml
GUIModel/Meter/: ChargeGuage.qml  DigitalSpeed.qml  Mask.qml  Meter.qml  Ready.qml  Ring.qml  Sideline.qml  SpeedGuage.qml  SpeedNeedle.qml  Tachometer.qml
GUIModel/ShiftPosition/: ShiftPosition.qml
GUIModel/TurnByTurn/: TurnByTurn.qml
